定时轮播图

--- a/server/JDinServer/index.html
+++ b/server/JDinServer/index.html
@@ -6,6 +6,7 @@
     <title>京东移动-首页</title>
     <link rel="stylesheet" href="/public/css/base.css">
     <link rel="stylesheet" href="/public/css/index.css">
+    <script src="/public/js/index.js"></script>
 </head>
 <body>
 <div class="jd_container">
@@ -23,15 +24,10 @@
     <!--轮播图-->
     <div class="jd_banner">
         <ul>
-            <li><a href="#"><img src="/public/images/l8.jpg"></a></li>
+            <li><a href="#"><img src="/public/images/l3.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l1.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l2.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l3.jpg"></a></li>
-            <li><a href="#"><img src="/public/images/l4.jpg"></a></li>
-            <li><a href="#"><img src="/public/images/l5.jpg"></a></li>
-            <li><a href="#"><img src="/public/images/l6.jpg"></a></li>
-            <li><a href="#"><img src="/public/images/l7.jpg"></a></li>
-            <li><a href="#"><img src="/public/images/l8.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l1.jpg"></a></li>
         </ul>
         <ul>
@@ -120,6 +116,7 @@
                 <img class="fl w50" src="/public/images/cp6.jpg" alt="">
             </div>
         </div>
+        <div style="height: 200px"></div>
     </div>
 </div>
 </body>
