--- a/server/JDinServer/index.html
+++ b/server/JDinServer/index.html
@@ -23,11 +23,16 @@
     </header>
     <!--轮播图-->
     <div class="jd_banner">
-        <ul>
-            <li><a href="#"><img src="/public/images/l3.jpg"></a></li>
+        <ul class="clearFix">
+            <li><a href="#"><img src="/public/images/l8.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l1.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l2.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l3.jpg"></a></li>
+            <li><a href="#"><img src="/public/images/l4.jpg"></a></li>
+            <li><a href="#"><img src="/public/images/l5.jpg"></a></li>
+            <li><a href="#"><img src="/public/images/l6.jpg"></a></li>
+            <li><a href="#"><img src="/public/images/l7.jpg"></a></li>
+            <li><a href="#"><img src="/public/images/l8.jpg"></a></li>
             <li><a href="#"><img src="/public/images/l1.jpg"></a></li>
         </ul>
         <ul>
