倒计时部分完成

--- a/server/JDinServer/index.html
+++ b/server/JDinServer/index.html
@@ -75,14 +75,14 @@
                 掌上描述
             </span>
             <div class="time">
-                <span>0</span>
-                <span>0</span>
+                <span class="times">0</span>
+                <span class="times">0</span>
                 <span>:</span>
-                <span>0</span>
-                <span>0</span>
+                <span class="times">0</span>
+                <span class="times">0</span>
                 <span>:</span>
-                <span>0</span>
-                <span>0</span>
+                <span class="times">0</span>
+                <span class="times">0</span>
             </div>
             <span class="more fr">更多></span>
             <div class="products clearFix">
