分类基础页面完成

--- a/server/JDinServer/index.html
+++ b/server/JDinServer/index.html
@@ -49,7 +49,7 @@
     <!--导航栏-->
     <nav class="jd_nav">
         <ul class="clearFix">
-            <li><a href="#"><img src="/public/images/nav0.png">
+            <li><a href="/toCategory"><img src="/public/images/nav0.png">
                 <p>分类</p></a></li>
             <li><a href="#"><img src="/public/images/nav1.png">
                 <p>分类</p></a></li>
