--- a/server/JDinServer/category.html
+++ b/server/JDinServer/category.html
@@ -67,5 +67,7 @@
         </div>
     </div>
 </div>
+<script src="/public/js/common.js"></script>
+<script src="/public/js/category.js"></script>
 </body>
 </html>
